--- a/parcelmate/AppShell.xaml
+++ b/parcelmate/AppShell.xaml
@@ -28,16 +28,12 @@
             <Style TargetType="FlyoutItem" BasedOn="{StaticResource BaseStyle}" />
         </ResourceDictionary>
     </Shell.Resources>
-    <TabBar>
+    <TabBar Route="Home">
         <ShellContent Title="Parcel Scanner" Icon="icon_barcode.png" Route="MainPage" ContentTemplate="{DataTemplate local:MainPage}" />
         <ShellContent Title="Courier" Icon="icon_courier.png" ContentTemplate="{DataTemplate local:CourierInfoPage}" />
         <ShellContent Title="Available Deliveries" Icon="icon_truck.png" ContentTemplate="{DataTemplate local:AvailableDeliveriesPage}"/>
     </TabBar>
-
-    <!--
-        If you would like to navigate to this content you can do so by calling
-        await Shell.Current.GoToAsync("//LoginPage");
-    -->
-
-
+    <TabBar Route="Login">
+        <ShellContent ContentTemplate="{DataTemplate local:LoginPage}" />
+    </TabBar>
 </Shell>
