--- a/parcelmate/Views/CourierInfoPage.xaml
+++ b/parcelmate/Views/CourierInfoPage.xaml
@@ -31,21 +31,7 @@
                 </ContentView>
             </StackLayout>
             <StackLayout VerticalOptions="CenterAndExpand" Padding="20">
-                <StackLayout x:Name="LoginFields" IsVisible="{Binding IsLoggedIn, Converter={StaticResource NegateBool}}">
-                    <Label Text="Login" FontSize="24" HorizontalOptions="CenterAndExpand" Margin="0,0,0,20"/>
-                    <Frame BackgroundColor="#EFEFEF" CornerRadius="10" Padding="0" HeightRequest="40" Margin="60,0,60,10">
-                        <Entry Placeholder="Username" x:Name="UsernameEntry" 
-                               BackgroundColor="{StaticResource Primary}"
-                               Text="{Binding User}"/>
-                    </Frame>
-                    <Frame BackgroundColor="#EFEFEF" CornerRadius="10" Padding="0" HeightRequest="40" Margin="60,0,60,10">
-                        <Entry Placeholder="Password" x:Name="PasswordEntry" IsPassword="True" BackgroundColor="{StaticResource Primary}"
-                               Text="{Binding Password}"/>
-                    </Frame>
-                    <Button Text="Login" 
-                            Command="{Binding SignInCommand}" HorizontalOptions="FillAndExpand" Margin="130,20,130,0" TextColor="White" CornerRadius="15"/>
-                </StackLayout>
-                <Grid x:Name="CourierDetails" IsVisible="{Binding IsLoggedIn}">
+                <Grid x:Name="CourierDetails" IsVisible="true">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="1*" />
                         <ColumnDefinition Width="2*" />
@@ -53,37 +39,37 @@
 
                     <Label Text="First Name" FontSize="Subtitle" TextColor="Black" VerticalOptions="CenterAndExpand" HorizontalOptions="FillAndExpand"  Grid.Column="0" Grid.Row="0"/>
                     <Frame CornerRadius="15" Padding="0" Margin="0,0,0,0" HasShadow="False" Grid.Column="1" Grid.Row="0" HorizontalOptions="FillAndExpand">
-                        <Entry Placeholder="First Name" x:Name="FirstName" TextColor="Black" BackgroundColor="{StaticResource Primary}" Margin="0,0,0,0"  VerticalOptions="End"  />
+                        <Entry Placeholder="First Name" x:Name="FirstName" TextColor="White" BackgroundColor="{StaticResource Primary}" Margin="0,0,0,0"  VerticalOptions="End"  />
                     </Frame>
                     <Label Text="Last Name" TextColor="Black" FontSize="Subtitle" VerticalOptions="CenterAndExpand" HorizontalOptions="FillAndExpand"  Grid.Column="0" Grid.Row="1"/>
                     <Frame CornerRadius="15" Padding="0" Margin="0,0,0,0" HasShadow="False" Grid.Column="1" Grid.Row="1" HorizontalOptions="FillAndExpand">
-                        <Entry Placeholder="Last Name" x:Name="LastName" TextColor="Black" BackgroundColor="{StaticResource Primary}" Margin="0,0,0,0" HorizontalOptions="FillAndExpand" VerticalOptions="End" Grid.Column="1" Grid.Row="1" />
+                        <Entry Placeholder="Last Name" x:Name="LastName" TextColor="White" BackgroundColor="{StaticResource Primary}" Margin="0,0,0,0" HorizontalOptions="FillAndExpand" VerticalOptions="End" Grid.Column="1" Grid.Row="1" />
                     </Frame>
                     <Label Text="Age" TextColor="Black" FontSize="Subtitle" VerticalOptions="CenterAndExpand" HorizontalOptions="FillAndExpand"  Grid.Column="0" Grid.Row="2"/>
                     <Frame CornerRadius="15" Padding="0" Margin="0,0,0,0" HasShadow="False" Grid.Column="1" Grid.Row="2" HorizontalOptions="FillAndExpand">
-                        <Entry Placeholder="Age" x:Name="Age" TextColor="Black" BackgroundColor="{StaticResource Primary}" Grid.Column="1" Grid.Row="2" HorizontalOptions="FillAndExpand" VerticalOptions="End"/>
+                        <Entry Placeholder="Age" x:Name="Age" TextColor="White" BackgroundColor="{StaticResource Primary}" Grid.Column="1" Grid.Row="2" HorizontalOptions="FillAndExpand" VerticalOptions="End"/>
                     </Frame>
                     <Label Text="Driver License Expiry Date" TextColor="Black" FontSize="Subtitle" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"  Grid.Column="0" Grid.Row="3"/>
                     <Frame CornerRadius="15" Padding="0" Margin="0,0,0,0" HasShadow="False" Grid.Column="1" Grid.Row="3" HorizontalOptions="FillAndExpand">
-                        <Entry Placeholder="Driver License Expiry Date" x:Name="DriverLicenseExpiryDate" TextColor="Black" BackgroundColor="{StaticResource Primary}" HorizontalOptions="FillAndExpand" VerticalOptions="End" Grid.Column="1" Grid.Row="3"/>
+                        <Entry Placeholder="Driver License Expiry Date" x:Name="DriverLicenseExpiryDate" TextColor="White" BackgroundColor="{StaticResource Primary}" HorizontalOptions="FillAndExpand" VerticalOptions="End" Grid.Column="1" Grid.Row="3"/>
                     </Frame>
                     <Label Text="Driver License Category" TextColor="Black" FontSize="Subtitle" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"  Grid.Column="0" Grid.Row="4"/>
                     <Frame CornerRadius="15" Padding="0" Margin="0,0,0,0" HasShadow="False" Grid.Column="1" Grid.Row="4" HorizontalOptions="FillAndExpand">
-                        <Entry Placeholder="Driver License Category" x:Name="DriverLicenseCategory" TextColor="Black" BackgroundColor="{StaticResource Primary}" HorizontalOptions="FillAndExpand" VerticalOptions="End" Grid.Column="1" Grid.Row="4"/>
+                        <Entry Placeholder="Driver License Category" x:Name="DriverLicenseCategory" TextColor="White" BackgroundColor="{StaticResource Primary}" HorizontalOptions="FillAndExpand" VerticalOptions="End" Grid.Column="1" Grid.Row="4"/>
                     </Frame>
                     <Label Text="Are you certified?" TextColor="Black" FontSize="Subtitle" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"  Grid.Column="0" Grid.Row="5" />
                     <Frame CornerRadius="15" Padding="0" Margin="0,0,0,0" HasShadow="False" Grid.Column="1" Grid.Row="5" HorizontalOptions="FillAndExpand">
-                        <Entry Placeholder="Are you certified?" x:Name="IsCertified" TextColor="Black" BackgroundColor="{StaticResource Primary}" HorizontalOptions="FillAndExpand" VerticalOptions="End" Grid.Column="1" Grid.Row="5"/>
+                        <Entry Placeholder="Are you certified?" x:Name="IsCertified" TextColor="White" BackgroundColor="{StaticResource Primary}" HorizontalOptions="FillAndExpand" VerticalOptions="End" Grid.Column="1" Grid.Row="5"/>
                     </Frame>
-                    <Label Text="Allowed to carry dangerous goods?" TextColor="Black" FontSize="Subtitle" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"  Grid.Column="0" Grid.Row="6" />
+                    <Label Text="Carry dangerous goods?" TextColor="Black" FontSize="Subtitle" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand"  Grid.Column="0" Grid.Row="6" />
                     <Frame CornerRadius="15" Padding="0" Margin="0,0,0,0" HasShadow="False" Grid.Column="1" Grid.Row="6" HorizontalOptions="FillAndExpand">
-                        <Entry Placeholder="Allowed to carry dangerous goods?" x:Name="IsDangerousGoodsAllowed" TextColor="Black" BackgroundColor="{StaticResource Primary}" HorizontalOptions="FillAndExpand" WidthRequest="100" VerticalOptions="End" Grid.Column="1" Grid.Row="6"/>
+                        <Entry Placeholder="Allowed to carry dangerous goods?" x:Name="IsDangerousGoodsAllowed" TextColor="White" BackgroundColor="{StaticResource Primary}" HorizontalOptions="FillAndExpand" WidthRequest="100" VerticalOptions="End" Grid.Column="1" Grid.Row="6"/>
                     </Frame>
                 </Grid>
                 <StackLayout Margin="0,0,0,0">
                     <StackLayout Orientation="Horizontal" Padding="45" HorizontalOptions="CenterAndExpand" >
-                        <Button Text="Sign Out" IsVisible="{Binding IsLoggedIn}" Command="{Binding SignOutCommand}"  Margin="00,00,00,0" CornerRadius="15"/>
-                        <Button Text="Refresh" Clicked="PopulateFields" Margin="0,0,0,0" CornerRadius="15"/>
+                        <Button Text="Sign Out" IsVisible="true" Command="{Binding SignOutCommand}"  Margin="00,00,00,0" CornerRadius="15"/>
+                        <Button Text="Refresh" IsVisible="true" Clicked="PopulateFields" Margin="0,0,0,0" CornerRadius="15"/>
                     </StackLayout>
                 </StackLayout>
             </StackLayout>
